--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "eslint": "^3.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.7.2",
+    "html-webpack-plugin": "^2.22.0",
     "html5-history-api": "^4.2.7",
     "immutable": "^3.8.1",
     "inline-source-map": "^0.6.2",
@@ -109,11 +109,12 @@
     "stylelint-webpack-plugin": "^0.2.0",
     "to-string-loader": "^1.1.3",
     "ts-helpers": "^1.1.1",
+    "ts-loader": "^0.8.2",
     "tslint": "^3.12.1",
-    "tslint-loader": "^2.1.0",
+    "tslint-loader": "^2.1.5",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
-    "webpack": "^1.13.0",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.9.1",
     "webpack-node-externals": "^1.3.2",
