--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --progress --profile --bail",
     "server": "webpack-dev-server --inline --progress --port 8080",
+    "serverprod": "webpack-dev-server --inline --progress --port 8080 --watch",
     "webdriver-update": "webdriver-manager update",
     "webdriver-start": "webdriver-manager start",
     "lint": "tslint --force \"src/**/*.ts\"",
